feat: se crea documentacion de despliegue de la aplicacion

--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: score-ms
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
     - port: 8089
       targetPort: 8080
